--- a/TuftsCS/SportsAnalytics/nba-backend/requirements.txt
+++ b/TuftsCS/SportsAnalytics/nba-backend/requirements.txt
@@ -1,7 +1,7 @@
 alabaster==0.7.12
 anaconda-client
-anaconda-navigator==1.9.7
-anaconda-project==0.8.2
+anaconda-navigator
+anaconda-project
 appdirs==1.4.4
 appnope==0.1.0
 appscript==1.0.1
