--- a/TuftsCS/SportsAnalytics/nba-backend/requirements.txt
+++ b/TuftsCS/SportsAnalytics/nba-backend/requirements.txt
@@ -108,13 +108,13 @@ nose==1.3.7
 notebook==5.7.8
 numba==0.43.1
 numexpr==2.6.9
-numpy==1.16.2 // LEAVE IN
-numpydoc==0.8.0 // LEAVE IN
+numpy==1.16.2
+numpydoc==0.8.0
 olefile==0.46
 openpyxl==2.6.1
 packaging==19.0
-pandas==0.24.2 // LEAVE IN
-pandocfilters==1.4.2 // LEAVE IN
+pandas==0.24.2
+pandocfilters==1.4.2
 parso==0.3.4
 partd==0.3.10
 path.py==11.5.0
