--- a/TuftsCS/SportsAnalytics/nba-backend/requirements.txt
+++ b/TuftsCS/SportsAnalytics/nba-backend/requirements.txt
@@ -24,8 +24,8 @@ certifi==2019.3.9
 cffi==1.12.2
 chardet==3.0.4
 Click==7.0
-cloudpickle==0.8.0
-clyent==1.2.2
+cloudpickle
+clyent
 colorama==0.4.1
 conda==4.6.14
 conda-build==3.17.8
