--- a/TuftsCS/SportsAnalytics/nba-backend/requirements.txt
+++ b/TuftsCS/SportsAnalytics/nba-backend/requirements.txt
@@ -2,7 +2,7 @@ beautifulsoup4==4.11.1
 Flask==1.0.2
 Flask_Cors==3.0.10
 lxml==4.8.0
-numpy==1.16.2
+numpy
 pandas==0.24.2
 requests==2.24.0
 scipy==1.2.1
